@@ -18,16 +18,20 @@
 
 import gtk
 
+from tools import consts
+
 
 __lbl               = None
 __dirBtnIcon        = None
 __dirMenuIcon       = None
+__starMenuIcon      = None
 __prefsBtnIcon      = None
 __nullMenuIcon      = None
 __playMenuIcon      = None
 __pauseMenuIcon     = None
 __cdromMenuIcon     = None
 __errorMenuIcon     = None
+__starDirMenuIcon   = None
 __mediaDirMenuIcon  = None
 __mediaFileMenuIcon = None
 
@@ -102,6 +106,16 @@ def cdromMenuIcon():
     return __cdromMenuIcon
 
 
+def starMenuIcon():
+    """ Star """
+    global __starMenuIcon
+
+    if __starMenuIcon is None:
+        __starMenuIcon = gtk.gdk.pixbuf_new_from_file(consts.fileImgStar16)
+
+    return __starMenuIcon
+
+
 def errorMenuIcon():
     """ Error """
     global __errorMenuIcon
@@ -132,6 +146,17 @@ def mediaDirMenuIcon():
         cdromMenuIcon().composite(__mediaDirMenuIcon, 5, 5, 11, 11, 5, 5, 0.6875, 0.6875, gtk.gdk.INTERP_HYPER, 255)
 
     return __mediaDirMenuIcon
+
+
+def starDirMenuIcon():
+    """ Starred directory """
+    global __starDirMenuIcon
+
+    if __starDirMenuIcon is None:
+        __starDirMenuIcon = dirMenuIcon().copy()  # We need a copy to modify it
+        starMenuIcon().composite(__starDirMenuIcon, 5, 5, 11, 11, 5, 5, 0.6875, 0.6875, gtk.gdk.INTERP_HYPER, 255)
+
+    return __starDirMenuIcon
 
 
 def mediaFileMenuIcon():
