@@ -3,6 +3,7 @@
 
 
 v1.06 ()
+    [+] Albums in the Library can be added to favorites using the popup menu
     [-] CD explorer not always removed when unloading the CD module (#603902)
 
 
